# MeowIndex

./: .gitignore  .npmignore  LICENSE  README.md  index.html  package.json
.github/workflows/: docker.yml  nightly.yml
backend/: Cargo.toml  Dockerfile  docker-compose.yml  encoding.toml
backend/res/thumb/: ffmpeg.thumbnailer  imagemagick.thumbnailer
backend/src/: encoder.rs  generator.rs  macros.rs  main.rs  test.rs  thumbnailer.rs  utils.rs
docs/: example.nginx.conf  nginx.conf
docs/examples/: README.md  arch.nginx.conf
src/: App.tsx  app.sass  utils.ts
