[package]
name = "meow_index"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test"
path = "src/test.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
duplicate = "0.4.1"
hyper = { version = "0.14", features = ["full"] }
log = "0.4.17"
path-clean = "0.1.0"
pathdiff = "0.2.1"
pretty_env_logger = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.1.0"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
url-escape = "0.1.1"
xdg-mime = "0.3.3"
